--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -5,25 +5,27 @@
       <mat-icon mat-list-icon>home</mat-icon>
       Home
     </a>
+    <mat-divider></mat-divider>
     <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>business</mat-icon>
       Empréstimo
     </a>
+    <mat-divider></mat-divider>
     <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
-      <mat-icon mat-list-icon>business</mat-icon>
+      <mat-icon mat-list-icon>arrow_downward</mat-icon>
       Saída
     </a>
+    <mat-divider></mat-divider>
     <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
-      <mat-icon mat-list-icon>business</mat-icon>
+      <mat-icon mat-list-icon>arrow_upward</mat-icon>
       Entrada
     </a>
+    <mat-divider></mat-divider>
     <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>equalizer</mat-icon>
       Relatórios
     </a>
-    <a mat-list-item routerLink="/grupo" routerLinkActive="active" (click)="display = false">
-      <mat-icon mat-list-icon>view_compact</mat-icon>
-      Grupo</a>
+    <mat-divider></mat-divider>
 
     <a mat-list-item (click)="toggleSubMenuCadastro()">
       <mat-icon mat-list-icon>business</mat-icon>
@@ -36,14 +38,17 @@
         <mat-icon mat-list-icon>business</mat-icon>
         Item
       </a>
-      <a mat-list-item (click)="display = false">
-        <mat-icon mat-list-icon>business</mat-icon>
+      <mat-divider></mat-divider>
+      <a mat-list-item routerLink="/grupo" routerLinkActive="active" (click)="display = false">
+        <mat-icon mat-list-icon>view_compact</mat-icon>
         Grupo
       </a>
+      <mat-divider></mat-divider>
       <a mat-list-item (click)="display = false">
         <mat-icon mat-list-icon>work</mat-icon>
         Fornecedor
       </a>
+      <mat-divider></mat-divider>
       <a mat-list-item (click)="display = false">
         <mat-icon mat-list-icon>person</mat-icon>
         Usuário
