--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
   <app-sidenav></app-sidenav>
-  <span>Laboratório UTFPR</span>
+  <span>Lab's Logistic</span>
 </mat-toolbar>
