--- a/src/app/grupo/grupo.list.component.html
+++ b/src/app/grupo/grupo.list.component.html
@@ -1,27 +1,39 @@
 <div class="container-fluid">
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-  </mat-form-field>
+  <mat-card>
+    <mat-card-title>
+      Grupo
+      <button type="button"
+              class="btn btn-primary"
+              (click)="openForm()"
+              mat-icon-button="add">
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-card-title>
+    <mat-card-content>
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+      </mat-form-field>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
 
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Código</th>
-        <td mat-cell *matCellDef="let row">{{row.idGrupo}}</td>
-      </ng-container>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Código</th>
+            <td mat-cell *matCellDef="let row">{{row.idGrupo}}</td>
+          </ng-container>
 
-      <ng-container matColumnDef="descricao">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
-        <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
-      </ng-container>
+          <ng-container matColumnDef="descricao">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
+            <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
+          </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-      </tr>
-    </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+          </tr>
+        </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
-  </div>
-
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
