--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -44,12 +44,12 @@
         Grupo
       </a>
       <mat-divider></mat-divider>
-      <a mat-list-item (click)="display = false">
+      <a mat-list-item routerLink="/fornecedor" routerLinkActive="active" (click)="display = false">
         <mat-icon mat-list-icon>work</mat-icon>
         Fornecedor
       </a>
       <mat-divider></mat-divider>
-      <a mat-list-item (click)="display = false">
+      <a mat-list-item routerLink="/usuario" routerLinkActive="active" (click)="display = false">
         <mat-icon mat-list-icon>person</mat-icon>
         Usuário
       </a>
