--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  background-color: #f5f5f5 !important;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.w-100px {
+  width: 100px !important;
+}
+
+.br-25px {
+  border-radius: 25px !important;
+}
+
+.mat-card {
+  border-radius: 10px !important;
+}
