--- a/src/app/grupo/grupo.form.component.html
+++ b/src/app/grupo/grupo.form.component.html
@@ -21,7 +21,7 @@
                      name="id"
                      disabled
                      class="form-control"
-                     [(ngModel)]="grupo.idGrupo"
+                     [(ngModel)]="object.id"
                      pInputText>
             </div>
           </div>
@@ -33,7 +33,7 @@
                      id="descricao"
                      name="descricao"
                      class="form-control"
-                     [(ngModel)]="grupo.descricao"
+                     [(ngModel)]="object.descricao"
                      pInputText>
             </div>
           </div>
