--- a/src/app/grupo/grupo.list.component.html
+++ b/src/app/grupo/grupo.list.component.html
@@ -21,7 +21,7 @@
 
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Código</th>
-            <td mat-cell *matCellDef="let row">{{row.idGrupo}}</td>
+            <td mat-cell *matCellDef="let row">{{row.id}}</td>
           </ng-container>
 
           <ng-container matColumnDef="descricao">
