--- a/src/app/pageNotFound/pageNotFound.component.html
+++ b/src/app/pageNotFound/pageNotFound.component.html
@@ -1,26 +1,15 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="center">
-        <i class="fa fa-close fa-5x"></i>
-
-        <h1>
-          Oops.. Você acessou uma página incorreta
-        </h1>
-
-        <h3>
-          O que você está procurando parece que não existe ou foi renomeada, tem certeza que o link está correto?
-        </h3>
-      </div>
+  <div class="boo-wrapper">
+    <div class="boo">
+      <div class="face"></div>
     </div>
-  </div>
+    <div class="shadow"></div>
 
-  <div class="row">
-    <div class="col-4">
-      <button class="btn btn-link btn-block" (click)="back()">Retornar à página anterior</button>
-    </div>
-    <div class="col-4">
-      <button routerLink="" class="btn btn-link btn-block" >Ir a página Inicial</button>
-    </div>
+    <h1>Oops! :(</h1>
+    <p>
+      Não foi possível encontrar
+      <br />
+      a página que estava procurando.
+    </p>
   </div>
 </div>
