--- a/src/app/usuario/usuario.form.component.html
+++ b/src/app/usuario/usuario.form.component.html
@@ -21,7 +21,7 @@
                      name="id"
                      disabled
                      class="form-control"
-                     [(ngModel)]="usuario.id"
+                     [(ngModel)]="object.id"
                      pInputText>
             </div>
           </div>
@@ -33,7 +33,7 @@
                      id="descricao"
                      name="descricao"
                      class="form-control"
-                     [(ngModel)]="usuario.nome"
+                     [(ngModel)]="object.nome"
                      pInputText>
             </div>
           </div>
@@ -45,7 +45,7 @@
                      id="email"
                      name="email"
                      class="form-control"
-                     [(ngModel)]="usuario.email"
+                     [(ngModel)]="object.email"
                      pInputText>
             </div>
           </div>
@@ -59,7 +59,7 @@
                      id="usuario"
                      name="usuario"
                      class="form-control"
-                     [(ngModel)]="usuario.usuario"
+                     [(ngModel)]="object.usuario"
                      pInputText>
             </div>
           </div>
