--- a/src/app/notAuthorized/notAuthorized.component.html
+++ b/src/app/notAuthorized/notAuthorized.component.html
@@ -1,29 +1,15 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <div class="center">
-        <i class="fa fa-lock-open fa-5x"></i>
-
-        <h1>
-          Oops.. Uma autorização é necessária
-        </h1>
-
-        <h3>
-          Você não possui acesso para visualizar o conteúdo desta página, caso seja necessário, por favor
-          contate o supervisor do sistema da sua instituição.
-        </h3>
-      </div>
+<div class="container">
+  <div class="boo-wrapper">
+    <div class="boo">
+      <div class="face"></div>
     </div>
-  </div>
+    <div class="shadow"></div>
 
-  <div class="row">
-    <div class="col-4">
-      <button class="btn btn-link btn-block" (click)="back()">Retornar à página anterior</button>
-    </div>
-    <div class="col-4">
-      <button routerLink="" class="btn btn-link btn-block" >Ir a página Inicial</button>
-    </div>
+    <h1>403! :X</h1>
+    <p>
+      Você não possui autorização
+      <br />
+      para visualizar esta página.
+    </p>
   </div>
 </div>
-
-<p>not-authorized works!</p>
