--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,35 +6,35 @@
       Home
     </a>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
+    <a mat-list-item routerLink="/emprestimo" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>business</mat-icon>
       Empréstimo
     </a>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
+    <a mat-list-item routerLink="/saida" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>arrow_downward</mat-icon>
       Saída
     </a>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
+    <a mat-list-item routerLink="/entrada" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>arrow_upward</mat-icon>
       Entrada
     </a>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
+    <a mat-list-item routerLink="/relatorios" routerLinkActive="active" (click)="display = false">
       <mat-icon mat-list-icon>equalizer</mat-icon>
       Relatórios
     </a>
     <mat-divider></mat-divider>
 
     <a mat-list-item (click)="toggleSubMenuCadastro()">
-      <mat-icon mat-list-icon>business</mat-icon>
+      <mat-icon mat-list-icon>edit</mat-icon>
       Cadastros
       <mat-icon *ngIf="!showSubMenuCadastro">chevron_right</mat-icon>
       <mat-icon *ngIf="showSubMenuCadastro">expand_more</mat-icon>
     </a>
     <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuCadastro" style="margin-left: 25px !important;">
-      <a mat-list-item (click)="display = false">
+      <a mat-list-item routerLink="/item" routerLinkActive="active" (click)="display = false">
         <mat-icon mat-list-icon>business</mat-icon>
         Item
       </a>
@@ -54,10 +54,37 @@
         Usuário
       </a>
     </mat-nav-list>
+
+    <mat-divider></mat-divider>
+
+    <a mat-list-item (click)="toggleSubMenuGerais()">
+      <mat-icon mat-list-icon>business</mat-icon>
+      Geral
+      <mat-icon *ngIf="!showSubMenuGerais">chevron_right</mat-icon>
+      <mat-icon *ngIf="showSubMenuGerais">expand_more</mat-icon>
+    </a>
+
+    <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuGerais" style="margin-left: 25px !important;">
+      <a mat-list-item routerLink="/cidade" routerLinkActive="active" (click)="display = false">
+        <mat-icon mat-list-icon>location_city</mat-icon>
+        Cidade
+      </a>
+      <mat-divider></mat-divider>
+      <a mat-list-item routerLink="/estado" routerLinkActive="active" (click)="display = false">
+        <mat-icon mat-list-icon>view_compact</mat-icon>
+        Estado
+      </a>
+      <mat-divider></mat-divider>
+      <a mat-list-item routerLink="/pais" routerLinkActive="active" (click)="display = false">
+        <mat-icon mat-list-icon>emoji_flags</mat-icon>
+        País
+      </a>
+    </mat-nav-list>
+
   </mat-nav-list>
 
 </p-sidebar>
 
-<button class="btn-icon" (click)="openSidenav()">
-  <i class="fa fa-2x fa-bars white-text"></i>
+<button id="btn-sidenav" class="btn-icon" (click)="openSidenav()">
+  <i class="fa fa-bars white-text"></i>
 </button>
