--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,7 @@
-<mat-toolbar color="primary">
-  <app-sidenav></app-sidenav>
-  <span>Lab's Logistic</span>
+<mat-toolbar color="primary" class="d-flex justify-content-between">
+  <div>
+    <app-sidenav></app-sidenav>
+    <span>Lab's Logistic</span>
+  </div>
+  <a href="#"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
 </mat-toolbar>
