--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@ body {
   width: 100px !important;
 }
 
+.w-200px {
+  width: 200px !important;
+}
+
 .br-25px {
   border-radius: 25px !important;
 }
