--- a/src/app/estado/estado.form.component.html
+++ b/src/app/estado/estado.form.component.html
@@ -58,6 +58,7 @@
                               appendTo="body"
                               field="nome"
                               inputStyleClass="form-control"
+                              [style]="{width: '100%'}"
                               [suggestions]="paisList"
                               [(ngModel)]="object.pais"
                               (onClear)="object.pais = null"
