--- a/src/app/fornecedor/fornecedor.form.component.html
+++ b/src/app/fornecedor/fornecedor.form.component.html
@@ -97,6 +97,7 @@
                               name="cidade"
                               field="nome"
                               inputStyleClass="form-control"
+                              [style]="{width: '100%'}"
                               [suggestions]="cidadeList"
                               [(ngModel)]="object.cidade"
                               (onClear)="object.cidade = null"
@@ -113,6 +114,7 @@
                               appendTo="body"
                               field="nome"
                               inputStyleClass="form-control"
+                              [style]="{width: '100%'}"
                               [suggestions]="estadoList"
                               [(ngModel)]="object.estado"
                               (onClear)="object.estado = null"
