--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body {
   height: 100%;
   background-color: #f5f5f5 !important;
@@ -24,4 +22,28 @@ body {
 
 .mat-card {
   border-radius: 10px !important;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(6, 6, 6, 0.48);
+  border-radius: 10px;
+  background-image: -webkit-linear-gradient(0deg,
+  rgba(255, 255, 255, 0.5) 25%,
+  transparent 25%,
+  transparent 50%,
+  rgba(255, 255, 255, 0.5) 50%,
+  rgba(255, 255, 255, 0.5) 75%,
+  transparent 75%,
+  transparent)
 }
