implementado a autenticação de usuário

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,5 +2,5 @@
   <div>
     <span>Lab's Logistic</span>
   </div>
-  <a href="#"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
+  <a href="#" (click)="logout()"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
 </mat-toolbar>
