--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container w-100 h-100 d-flex justify-content-center align-items-center">
 <!--  <div [style]="{backgroundColor: 'blue', height: '10px'}"></div>-->
-  <div class="col-lg-6">
+  <div class="col-md-5">
     <mat-card>
       <mat-card-header class="justify-content-center" style="margin: 25px 0 45px 0;">
         <mat-card-title>
@@ -8,7 +8,7 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <form>
+        <form #form (submit)="login()">
           <div class="row">
             <div class="col-md-12">
               <mat-form-field style="width: 100%">
@@ -16,6 +16,7 @@
                 <input type="text"
                        id="username"
                        name="username"
+                       [(ngModel)]="usuario.username"
                        matInput>
               </mat-form-field>
             </div>
@@ -28,20 +29,21 @@
                 <input type="password"
                        id="password"
                        name="password"
+                       [(ngModel)]="usuario.password"
                        matInput>
               </mat-form-field>
             </div>
           </div>
-        </form>
 
-        <div class="row justify-content-center">
-          <div class="col-md-6 d-flex justify-content-center">
-            <button mat-stroked-button
-                    class="w-100 br-25px"
-                    color="primary">Acessar</button>
+          <div class="row justify-content-center">
+            <div class="col-md-6 d-flex justify-content-center">
+              <button mat-stroked-button
+                      type="submit"
+                      class="w-100 br-25px"
+                      color="primary">Acessar</button>
+            </div>
           </div>
-        </div>
-
+        </form>
       </mat-card-content>
     </mat-card>
   </div>
