--- a/src/app/usuario/usuario.list.component.html
+++ b/src/app/usuario/usuario.list.component.html
@@ -31,7 +31,7 @@
 
           <ng-container matColumnDef="usuario">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuário</th>
-            <td mat-cell *matCellDef="let row">{{row.usuario}}</td>
+            <td mat-cell *matCellDef="let row">{{row.username}}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
